Revamped LoadTest's behaviour. No longer requires a default load profile in order to run